Update Thermal Expansion for BB84 Z gate for 1(1).ipynb

--- a/Thermal Relaxation Error/Thermal Expansion for BB84 Z gate for 1(1).ipynb
+++ b/Thermal Relaxation Error/Thermal Expansion for BB84 Z gate for 1(1).ipynb
@@ -5,7 +5,7 @@
    "id": "14d65611-1cf7-455c-8ad4-003efa416be2",
    "metadata": {},
    "source": [
-    "Thermal Expansion for BB84 Z gate for 1"
+    "Thermal Relaxation for BB84 Z gate for 1"
    ]
   },
   {
