--- a/Thermal Relaxation Error/Thermal Relaxation for BB84 H gate for (Minus).ipynb
+++ b/Thermal Relaxation Error/Thermal Relaxation for BB84 H gate for (Minus).ipynb
@@ -102,7 +102,7 @@
     "    bob_bits1=[]\n",
     "   \n",
     "    from random import choice\n",
-    "#################### 1001 times For loop for 10001 bit Transfer ##########\n",
+    "#################### 1001 times For loop for 1001 bit Transfer ##########\n",
     "    m=0\n",
     "    n=1001\n",
     "    for i in range(n):\n",
@@ -286,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Qiskit v0.35.0 (ipykernel)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
