--- a/Thermal Relaxation Error/Thermal Relaxation for E91 (using φ+)(for 01 and 10).ipynb
+++ b/Thermal Relaxation Error/Thermal Relaxation for E91 (using φ+)(for 01 and 10).ipynb
@@ -84,7 +84,7 @@
     "    bob_bits01=[]\n",
     "    bob_bits10=[]\n",
     "    from random import choice\n",
-    "#################### 1001 times For loop for 10001 bit Transfer ##########\n",
+    "#################### 1001 times For loop for 1001 bit Transfer ##########\n",
     "    m=0\n",
     "    n=1001\n",
     "    for i in range(n):\n",
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Qiskit v0.35.0 (ipykernel)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
