--- a/BB84/BB84.ipynb
+++ b/BB84/BB84.ipynb
@@ -911,7 +911,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Qiskit v0.35.0 (ipykernel)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -925,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
