--- a/E91/E91 Graph.ipynb
+++ b/E91/E91 Graph.ipynb
@@ -155,10 +155,11 @@
     "from matplotlib.ticker import (AutoMinorLocator, MultipleLocator)\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "fig.suptitle('E91 protocol with channel phi+',fontsize=15)\n",
-    "ax.set_xlim(10, 10000)\n",
-    "ax.set_ylim(0.6,1)\n",
+    "ax.set_xlim(10, 1000000)\n",
+    "ax.set_ylim(0,1)\n",
     "plt.ylabel('Probability of success',fontsize=14)\n",
-    "plt.xlabel('Time(micro sec)',fontsize=14)\n",
+    "plt.xlabel('Time(u sec)',fontsize=14)\n",
+    "plt.grid()\n",
     "fig = plt.figure(figsize=(8,5))\n",
     "ax.plot(delay,x1,label = \"|00>+|11>'s Delay\")\n",
     "ax.plot(delay,x2,label = \"|00>+|11>'s Delay+Measure\")\n",
@@ -175,7 +176,8 @@
     "ax.set_xlim(10, 10000)\n",
     "ax.set_ylim(0.6,1)\n",
     "plt.ylabel('Probability of success',fontsize=14)\n",
-    "plt.xlabel('Time(micro Sec)',fontsize=14)\n",
+    "plt.xlabel('Time(u Sec)',fontsize=14)\n",
+    "plt.grid()\n",
     "fig = plt.figure(figsize=(8,5))\n",
     "ax.plot(delay,x1,'ro-',label = \"|00>+|11>'s Delay\")\n",
     "ax.plot(delay,x2,'bo-',label = \"|00>+|11>'s Delay+Measure\")\n",
@@ -259,10 +261,11 @@
     "from matplotlib.ticker import (AutoMinorLocator, MultipleLocator)\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "fig.suptitle('E91 protocol with channel psi+',fontsize=15)\n",
-    "ax.set_xlim(10, 10000)\n",
-    "ax.set_ylim(0.6,1)\n",
+    "ax.set_xlim(10, 1000000)\n",
+    "ax.set_ylim(0,1)\n",
     "plt.ylabel('Probability of success',fontsize=14)\n",
     "plt.xlabel('Time(Micro Sec)',fontsize=14)\n",
+    "plt.grid()\n",
     "fig = plt.figure(figsize=(8,5))\n",
     "ax.plot(delay,x1,label = \"|01>+|10>'s Delay\")\n",
     "ax.plot(delay,x2,label = \"|01>+|10>'s Delay+Measure\")\n",
@@ -277,9 +280,10 @@
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "fig.suptitle('E91 protocol with channel psi+',fontsize=15)\n",
     "ax.set_xlim(10, 10000)\n",
-    "ax.set_ylim(0.6,1)\n",
+    "ax.set_ylim(0.9,1)\n",
     "plt.ylabel('Probability of success',fontsize=14)\n",
-    "plt.xlabel('Time(Micro Sec)',fontsize=14)\n",
+    "plt.xlabel('Time(u sec)',fontsize=14)\n",
+    "plt.grid()\n",
     "fig = plt.figure(figsize=(8,5))\n",
     "ax.plot(delay,x1,'ro-',label = \"|01>+|10>'s Delay\")\n",
     "ax.plot(delay,x2,'bo-',label = \"|01>+|10>'s Delay+Measure\")\n",
