--- a/E91/E91 Graph.ipynb
+++ b/E91/E91 Graph.ipynb
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b25d1d00",
+   "id": "71465242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7e9befe",
+   "id": "abca341d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "6c551402",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1df4c445e50>"
+       "<matplotlib.legend.Legend at 0x1df4d8530d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -314,6 +314,7 @@
     "ax.plot(delay,x2,'bo-',label = \"|01>+|10>'s Delay+Measure\")\n",
     "ax.plot(delay,x4,'ko-',label = \"|01>+|10>'s Delay+Gate\")\n",
     "ax.plot(delay,x3,'go-',label = \"|01>+|10>'s Delay+Measure+Gate\")\n",
+    "#ax.set_facecolor('0.90') # grey background\n",
     "ax.legend()"
    ]
   },
