--- a/E91/Device Properties(1).ipynb
+++ b/E91/Device Properties(1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "81736bd2",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ibmqfactory.load_account:WARNING:2022-04-14 04:56:28,658: Credentials are already in use. The existing account in the session will be replaced.\n"
+      "ibmqfactory.load_account:WARNING:2022-04-14 11:48:06,712: Credentials are already in use. The existing account in the session will be replaced.\n"
      ]
     }
    ],
@@ -62,6 +62,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "81c79f53-a51d-47be-a4ad-3e254ebfac86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ibmqfactory.load_account:WARNING:2022-04-14 11:56:11,648: Credentials are already in use. The existing account in the session will be replaced.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.0577777777777775e-07"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "# IBMQ.save_account(TOKEN)\n",
+    "IBMQ.load_account() # Load account from disk\n",
+    "IBMQ.providers()    # List all available providers\n",
+    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')\n",
+    "device = provider.get_backend('ibmq_lima')\n",
+    "device.properties().gate_length('cx',(0,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "c2896044-3463-438b-8faf-5d33a9baefa2",
    "metadata": {},
@@ -92,6 +126,59 @@
     "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')\n",
     "device = provider.get_backend('ibmq_armonk')\n",
     "device.properties().gate_length('x',(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1a10dbc2-3df6-4552-a752-611e7a78a535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ibmqfactory.load_account:WARNING:2022-04-14 05:51:01,107: Credentials are already in use. The existing account in the session will be replaced.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7.111111111111111e-08"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "# IBMQ.save_account(TOKEN)\n",
+    "IBMQ.load_account() # Load account from disk\n",
+    "IBMQ.providers()    # List all available providers\n",
+    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')\n",
+    "device = provider.get_backend('ibmq_armonk')\n",
+    "device.properties().gate_length('id',(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4d5c0955-4157-4ffd-aa87-dce96b1454ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=7.111111111111111e-08\n",
+    "print((a))"
    ]
   },
   {
@@ -190,17 +277,174 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "0976a28b379f4eb2b2c4557168ed794e": {
+     "04640449d05e497e9acd719cf5748864": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_08c02e890ed3412095570dce62334041",
+       "style": "IPY_MODEL_1d73e181a8974d38b78fcf656dcba0ec",
+       "value": "<h5>Status</h5>"
+      }
+     },
+     "08c02e890ed3412095570dce62334041": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
       "state": {
-       "grid_area": "right",
-       "padding": "0px 0px 0px 0px",
+       "width": "95px"
+      }
+     },
+     "0b39590226414ec1afef71c9c3600182": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "margin": "0px 0px 0px 37px",
+       "width": "600px"
+      }
+     },
+     "1ad76c7d8cb3427ca72716123229101c": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "1c103989c57240dab94115b87d8b90cb": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
        "width": "70px"
       }
      },
-     "10a9e738931e42dca05d413438fa9789": {
+     "1d73e181a8974d38b78fcf656dcba0ec": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "241aa7e820cf400db537bbc21c0f911d": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_1c103989c57240dab94115b87d8b90cb",
+       "style": "IPY_MODEL_1ad76c7d8cb3427ca72716123229101c",
+       "value": "<h5>Queue</h5>"
+      }
+     },
+     "250ccea69cb24923af0b22356bb57f30": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "width": "190px"
+      }
+     },
+     "2fcd52660c674a288d9663430eee1ae3": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "37e01171e7ac45258a76d6d39e069ca7": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "margin": "0px 0px 10px 0px"
+      }
+     },
+     "598128d261464bc7a66e3fdf5dcc6e5a": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonStyleModel",
+      "state": {}
+     },
+     "6d7074170b9245959690ac67d1dca6f9": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "70709d59a47240ab8720cd1bd510b08e": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "746efd4c8fc5410498fcc49dd49d95f5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_250ccea69cb24923af0b22356bb57f30",
+       "style": "IPY_MODEL_bae6d215f82a4c769a7c42df423f135f",
+       "value": "<h5>Job ID</h5>"
+      }
+     },
+     "7c43f62b5ae646edb6b18128b5091b20": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_37e01171e7ac45258a76d6d39e069ca7",
+       "style": "IPY_MODEL_b8f6e3e344ff430c9c0722bb0dc9bafc",
+       "value": "<p style='font-family: IBM Plex Sans, Arial, Helvetica, sans-serif; font-size: 20px; font-weight: medium;'>Circuit Properties</p>"
+      }
+     },
+     "913b828ffb9c43c79db62cfb16950f5e": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "button_style": "primary",
+       "description": "Clear",
+       "layout": "IPY_MODEL_f8dd0e8bfc6847e9be81e01972f02b8e",
+       "style": "IPY_MODEL_598128d261464bc7a66e3fdf5dcc6e5a"
+      }
+     },
+     "a0da836f74624f51b9e199e17b42e4ac": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_e23d99ab9d134e72b3d6b3d89085977d",
+       "style": "IPY_MODEL_70709d59a47240ab8720cd1bd510b08e",
+       "value": "<h5>Backend</h5>"
+      }
+     },
+     "a48c71e60a1c493cbfe70773f6a4f497": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_6d7074170b9245959690ac67d1dca6f9",
+       "style": "IPY_MODEL_2fcd52660c674a288d9663430eee1ae3",
+       "value": "<h5>Message</h5>"
+      }
+     },
+     "a4cb64e9ba0944a8adad7963f672e583": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "GridBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_913b828ffb9c43c79db62cfb16950f5e"
+       ],
+       "layout": "IPY_MODEL_b7f95fffb3704f508f9ce1a07663c221"
+      }
+     },
+     "b7f95fffb3704f508f9ce1a07663c221": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
@@ -210,23 +454,23 @@
        "width": "100%"
       }
      },
-     "1c3e9815c70c4b149fa158ae8fb3d0fa": {
+     "b8f6e3e344ff430c9c0722bb0dc9bafc": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "1c5e07c12fd04ec6a3ad25755fc67e23": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
+      "model_name": "DescriptionStyleModel",
       "state": {
-       "layout": "IPY_MODEL_66a53e147873431ebec6b37efb8d5e00",
-       "style": "IPY_MODEL_8f05617d41d2459da8851ab99847077b",
-       "value": "<h5>Queue</h5>"
+       "description_width": ""
       }
      },
-     "252391dc0d9f4cdaad0660c098246807": {
+     "bae6d215f82a4c769a7c42df423f135f": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "e23d99ab9d134e72b3d6b3d89085977d": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
@@ -234,186 +478,29 @@
        "width": "145px"
       }
      },
-     "36081581cde546d194e7694b41c50294": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "38cb24723ae94d6e8943caf5d829164b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "58bca79a797f4f548afcc8b9da081504": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "650287bf0484488d8c09d0ee9c8ff715": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "190px"
-      }
-     },
-     "66a53e147873431ebec6b37efb8d5e00": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "70px"
-      }
-     },
-     "674aebd991014113bbf817c462cd9b6a": {
+     "f308ad8440c244d98a97a2a6c9c16c4f": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.5.0",
       "model_name": "HBoxModel",
       "state": {
        "children": [
-        "IPY_MODEL_d5fc3bb799f34163b1b4bb97f077151f",
-        "IPY_MODEL_755a0b75ad6646f8846128f3823ec7e6",
-        "IPY_MODEL_f52ce91f89464226b17d982a950012f2",
-        "IPY_MODEL_1c5e07c12fd04ec6a3ad25755fc67e23",
-        "IPY_MODEL_a9dd3640226340b9b73772ce749f00ef"
+        "IPY_MODEL_746efd4c8fc5410498fcc49dd49d95f5",
+        "IPY_MODEL_a0da836f74624f51b9e199e17b42e4ac",
+        "IPY_MODEL_04640449d05e497e9acd719cf5748864",
+        "IPY_MODEL_241aa7e820cf400db537bbc21c0f911d",
+        "IPY_MODEL_a48c71e60a1c493cbfe70773f6a4f497"
        ],
-       "layout": "IPY_MODEL_93b465aabe104b76968fea819b04f3b4"
+       "layout": "IPY_MODEL_0b39590226414ec1afef71c9c3600182"
       }
      },
-     "6a909984f73e433c973194829d8c157b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "755a0b75ad6646f8846128f3823ec7e6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_252391dc0d9f4cdaad0660c098246807",
-       "style": "IPY_MODEL_38cb24723ae94d6e8943caf5d829164b",
-       "value": "<h5>Backend</h5>"
-      }
-     },
-     "7eaded7296ec497c92e074cb19648259": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "button_style": "primary",
-       "description": "Clear",
-       "layout": "IPY_MODEL_0976a28b379f4eb2b2c4557168ed794e",
-       "style": "IPY_MODEL_1c3e9815c70c4b149fa158ae8fb3d0fa"
-      }
-     },
-     "8f05617d41d2459da8851ab99847077b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "935fc6afc2d649228c6c13187f70639a": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_9e4b35c8302a479fa7ac6fce8193274c",
-       "style": "IPY_MODEL_e1b38e9cc200440e85d76b5ee6c2861d",
-       "value": "<p style='font-family: IBM Plex Sans, Arial, Helvetica, sans-serif; font-size: 20px; font-weight: medium;'>Circuit Properties</p>"
-      }
-     },
-     "93b465aabe104b76968fea819b04f3b4": {
+     "f8dd0e8bfc6847e9be81e01972f02b8e": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
       "state": {
-       "margin": "0px 0px 0px 37px",
-       "width": "600px"
-      }
-     },
-     "9e4b35c8302a479fa7ac6fce8193274c": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "margin": "0px 0px 10px 0px"
-      }
-     },
-     "a9dd3640226340b9b73772ce749f00ef": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_b172e4cbce4245bca1fd8c407f39fe2c",
-       "style": "IPY_MODEL_36081581cde546d194e7694b41c50294",
-       "value": "<h5>Message</h5>"
-      }
-     },
-     "b172e4cbce4245bca1fd8c407f39fe2c": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "b523c6cfe14540878309ab4423e2a2b2": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "95px"
-      }
-     },
-     "d5fc3bb799f34163b1b4bb97f077151f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_650287bf0484488d8c09d0ee9c8ff715",
-       "style": "IPY_MODEL_6a909984f73e433c973194829d8c157b",
-       "value": "<h5>Job ID</h5>"
-      }
-     },
-     "d6cd15380ca24780a84d6456f5f4b70c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "GridBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_7eaded7296ec497c92e074cb19648259"
-       ],
-       "layout": "IPY_MODEL_10a9e738931e42dca05d413438fa9789"
-      }
-     },
-     "e1b38e9cc200440e85d76b5ee6c2861d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "f52ce91f89464226b17d982a950012f2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_b523c6cfe14540878309ab4423e2a2b2",
-       "style": "IPY_MODEL_58bca79a797f4f548afcc8b9da081504",
-       "value": "<h5>Status</h5>"
+       "grid_area": "right",
+       "padding": "0px 0px 0px 0px",
+       "width": "70px"
       }
      }
     },
