--- a/BB84/BB84 probability of State 1.ipynb
+++ b/BB84/BB84 probability of State 1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6446db60",
+   "metadata": {},
+   "source": [
+    "# Thermal Relaxation error on BB84 protocol Plus State"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "d8a5e5e6",
@@ -226,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "86ba0f89",
+   "id": "2167cc70",
    "metadata": {},
    "outputs": [
     {
