--- a/E91/E91 (20 Time Average Graph).ipynb
+++ b/E91/E91 (20 Time Average Graph).ipynb
@@ -355,9 +355,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "9efb9174",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -388,9 +386,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "c7c02754",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1175,9 +1171,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "2fc5c135",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1830,7 +1824,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
